app/src/main/java/com/example/eltory/rejectcall/License.java
package com.example.eltory.rejectcall;

/**
 * Created by eltor on 2017-06-14.
 */
public class License {
}
